--- a/Bootstrap/GridSystem.html
+++ b/Bootstrap/GridSystem.html
@@ -11,13 +11,13 @@
       <h2>Grid System</h2>
 
         <div class="row">
-            <div class="col-1 bg-primary">div</div>
-            <div class="col-1 bg-secondary">div</div>
-            <div class="col-1 bg-warning">div</div>
-            <div class="col-1 bg-success">div</div>
-            <div class="col-1 bg-danger">div</div>
+            <div class="col-1 h1 bg-primary">div</div>
+            <div class="col-1 h2 bg-secondary">div</div>
+            <div class="col-1 h3 bg-warning">div</div>
+            <div class="col-1 h4 bg-success">div</div>
+            <div class="col-1 h5 bg-danger">div</div>
             <div class="col-1 bg-dark">div</div>
-            <div class="col-1 bg-primary">div</div>
+            <div class="col-1 h6 bg-primary">div</div>
             <div class="col-1 bg-warning">div</div>
             <div class="col-1 bg-info">div</div>
             <div class="col-1 bg-success">div</div>
@@ -42,8 +42,8 @@
             <div class="col-4 bg-secondary">div</div>
             <div class="col-4 bg-info">div</div>
 
-            <div class="row mt-2">
-                <div class="col-sm-4 col-md-6   bg-info">div</div>
+            <div class="row mt-3">
+                <div class="col-sm-4 col-md-6 py-4 bg-info">div</div>
                 <div class="col-sm-4 col-md-6 bg-warning">div</div>
             </div>
         </div>
