--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -6,16 +6,16 @@
     <title>Bootstrap Intro</title>
     <!-- download method -->
     <link rel="stylesheet" href="./css/bootstrap.min.css" type="text/css" />
-
-    <script src="./javascript/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./styles.css" type="text/css" />
+    <script  src="./javascript/bootstrap.min.js"></script>
 
     <!-- using cdn -->
 
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
   </head>
   <body>
-    <div class="container-fluid">
-      <h2 class="text-primary bg-secondary">Bootstrap Intro</h2>
+    <div class="container-fluid backgroundclr">
+      <h2 class="bg-secondary colorwhite">Bootstrap Intro</h2>
       <h2 class="text-secondary bg-primary">Bootstrap Intro</h2>
       <h2 class="text-success bg-secondary">Bootstrap Intro</h2>
       <h2 class="text-danger bg-success">Bootstrap Intro</h2>
